@startuml

title __BIOSYNTHESEINHERITANCEUSE's Class Diagram__\n

  package bioSyntheseInheritanceUse {
    class AminoAcid {
        - name : String
        - symbol : String
        - formule : String
        - trigram : String
        + getSymbol()
        + getName()
        + setName()
        + getFormule()
        + setFormule()
        + AminoAcid()
        + AminoAcid()
        + toString()
        + getTrigram()
    }
  }
  

  package bioSyntheseInheritanceUse {
    class Base {
        - name : String
        - symbol : String
        - family : String
        ~ Base()
        - initBaseElement()
        + compl()
        + isAdenine()
        + isCytosine()
        + isGuamine()
        + isThymine()
        + isUracile()
        + getSymbol()
        + toString()
    }
  }
  

  package bioSyntheseInheritanceUse {
    class Dna {
        + Dna()
        + Dna()
        + getComplStrand()
    }
  }
  

  package bioSyntheseInheritanceUse {
    class DnaRepository {
        + load()
        + getDna()
    }
  }
  

  package bioSyntheseInheritanceUse {
    class Enzyme {
        + Enzyme()
        + transcriptioh()
    }
  }
  

  package bioSyntheseInheritanceUse {
    class Program {
        {static} ~ RED_COLOR_CODE : String
        {static} ~ RESET_CODE : String
        {static} ~ affiche()
        {static} ~ testsDisplay()
        {static} + main()
    }
  }
  

  package bioSyntheseInheritanceUse {
    class Protein {
        - chain : ArrayList<AminoAcid>
        ~ Protein()
        ~ Protein()
        ~ factory()
        + toString()
        + getChain()
    }
  }
  

  package bioSyntheseInheritanceUse {
    class Ribosome {
        {static} + codonMap : HashMap<String, String>
        {static} + couple : HashMap<String, String>
        {static} - aminoMapExist : boolean
        {static} - coupleExist : boolean
        {static} + isTheEnd()
        {static} - getAminoMapExist()
        {static} - getAminoNameExist()
        {static} - initAminoName()
        {static} + getAminoName()
        {static} - initAminoMap()
        + codonToAminoAcid()
        + traduction()
    }
  }
  

  package bioSyntheseInheritanceUse {
    class Rna {
        + Rna()
    }
  }
  

  package bioSyntheseInheritanceUse {
    abstract class Strand {
        - type : String
        - nucleoAcideList : ArrayList<Base>
        + getType()
        + setType()
        + getNucleoAcideList()
        + setNucleoAcideList()
        ~ Strand()
        + Strand()
        + generateAcid()
        + toString()
    }
  }
  

  Dna -up-|> Strand
  DnaRepository o-- Dna : dna
  Rna -up-|> Strand


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
